# X

./: .gitignore  CLAUDE.md  smr.pine
backend/: .env.example  pyproject.toml  requirements.txt  start.sh  stop.sh  trading.yaml.example
backend/app/: config.py  main.py  trading_config.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/clients/: __init__.py  binance_rest.py  binance_ws_aggtrade.py  binance_ws_kline.py
backend/app/core/: __init__.py  indicators.py
backend/app/models/: __init__.py  fast.py  (+3 more)
backend/backtest/: __init__.py  __main__.py  config.py  downloader.py  engine.py  outcome.py  report.py  runner.py  stats.py
backend/core/: __init__.py  atr_tracker.py  kline_aggregator.py  signal_generator.py
backend/scripts/: backfill_replay.py  benchmark.py  check_data.py  check_klines.py  check_services.sh  download_aggtrades.py  download_aggtrades_full.py  download_klines.py  import_aggtrades_ultimate.py  import_local_aggtrades.py  migrate_signal_tables.py  monitor.sh  optimize_timescaledb.py  run_analysis.py  start.py  stress_test.py  verify_layer1_rest_client.py  verify_layer2_kline_aggregator.py  verify_layer3_indicators.py  verify_layer4_signal_logic.py  verify_layer5_position_tracker.py  verify_step_by_step.py
backend/tests/: test_benchmark.py  test_converters.py  test_ema_crossover.py  test_fast_models.py  test_indicators.py  test_integration.py  test_kline_aggregator.py  test_outcome.py  test_position_tracker.py  test_signal.py  test_signal_filter.py  test_stats.py  test_streak_cache.py  test_stress.py  test_trading_config.py
(+105 files in other folders)
